email check (input.value)

--- a/mail/index.html
+++ b/mail/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
 
+    <input id="checkMail" type="text">
+    <button id="verifyMail">Check</button>
+
+    <div id="outPut"></div>
 
 <script src="js/func.js"></script>    
 </body>
