--- a/dadi/index.html
+++ b/dadi/index.html
@@ -9,10 +9,13 @@
 </head>
 <body>
 
-    <input id="checkMail" type="text">
-    <button id="verifyMail">Check</button>
-
-    <div id="outPut"></div>
+<div id="gameArea">
+    <div id="result"></div>
+    <div>
+        <button id="startGame">Play game</button>
+    </div>
+    
+</div>
 
 <script src="js/func.js"></script>    
 </body>
